# VirginiaCensus

./: CMakeLists.txt  Cartography.py  README.md  algorithm.txt  census2010.txt
db_schema/: insert.py
version_1/: a.out  main.cpp
version_C#/: Cartography.cs  va-tiny-names.txt
version_C++/: CMakeLists.txt  Color.cpp  Color.h  County.cpp  County.h  Virginia.template  main.cpp  test
version_C++/Tests/: CMakeLists.txt  Correct.txt  Test_Create_Color.cpp  Test_DBConnection.cpp  Test_DBConnection_Fail.cpp  Test_DBQuery.cpp  Test_DBQuery_Fail.cpp  Wrong.txt  file_comparor.cpp  testing.cpp
version_C++/Tests/Correct/: Accomack.txt  Albemarle.txt  Alexandria.City.txt  Alleghany.txt  Amelia.txt  Amherst.txt  Arlington.txt  Bath.txt  Bedford.txt  Bland.txt  Botetourt.txt  Bristol.City.txt  Brunswick.txt  Buchanan.txt  Buckingham.txt  Buena_Vista.City.txt  Campbell.txt  Caroline.txt  Carroll.txt  Charlotte.txt  Charlottesville.City.txt  Chesapeake.City.txt  Chesterfield.txt  Colonial_Heights.City.txt  Craig.txt  Culpeper.txt  Cumberland.txt  Danville.City.txt  Dickenson.txt  Dinwiddie.txt  Emporia.City.txt  Essex.txt  Fairfax.txt  Falls_Church.City.txt  Fauquier.txt  Floyd.txt  Fluvanna.txt  Franklin.City.txt  Franklin.txt  Frederick.txt  (+65 more)
version_C++/db_schema/: census.sql  census2010.txt
version_python/: Cartography.py
version_python/db_schema/: census.sql
